--- a/index.html
+++ b/index.html
@@ -3,65 +3,126 @@
 <head>
   <meta charset="UTF-8">
   <title>Be My Valentine 💘</title>
+
+  <!-- Cute Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Fredoka', sans-serif;
       text-align: center;
-      margin-top: 100px;
-      background-color: #ffe6ee;
+      height: 100vh;
+      margin: 0;
+      background: linear-gradient(135deg, #ffd6e8, #ffeecf);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .card {
+      background: white;
+      padding: 40px;
+      border-radius: 25px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      max-width: 400px;
+      width: 90%;
     }
 
     h1 {
-      color: #ff4d79;
+      color: #ff4d88;
+      font-size: 28px;
+      margin-bottom: 10px;
     }
 
-    #buttons {
-      margin-top: 40px;
+    p {
+      color: #555;
+      font-size: 16px;
+      margin-bottom: 30px;
+    }
+
+    .buttons {
       position: relative;
-      height: 200px;
+      height: 120px;
     }
 
     button {
-      padding: 15px 30px;
+      font-family: 'Fredoka', sans-serif;
       font-size: 18px;
+      padding: 15px 30px;
+      border-radius: 15px;
       border: none;
-      border-radius: 10px;
       cursor: pointer;
+      transition: transform 0.2s;
+    }
+
+    button:hover {
+      transform: scale(1.05);
     }
 
     #yes {
-      background-color: #ff4d79;
+      background-color: #ff4d88;
       color: white;
+      box-shadow: 0 8px 20px rgba(255,77,136,0.4);
     }
 
     #no {
+      background-color: #f1f1f1;
+      color: #444;
       position: absolute;
-      background-color: #ccc;
+      left: 200px;
+      top: 40px;
     }
   </style>
 </head>
+
 <body>
+  <div class="card">
+    <h1>Valerie will you be my Valentine? 💖</h1>
+    <p>No stress. No pressure.  
+      <br>Okay tiny pressure 😌</p>
 
-  <h1>Will you be my Valentine? 💖</h1>
-
-  <div id="buttons">
-    <button id="yes" onclick="yesClicked()">Yes 💘</button>
-    <button id="no" onmouseover="moveNo()">No 😅</button>
+    <div class="buttons">
+      <button id="yes" onclick="yesClicked()">Yes 🥰</button>
+      <button id="no" onmouseover="moveNo()">No 🙃</button>
+    </div>
   </div>
 
   <script>
     function moveNo() {
       const noBtn = document.getElementById("no");
       const x = Math.random() * 250;
-      const y = Math.random() * 150;
+      const y = Math.random() * 80;
       noBtn.style.left = x + "px";
       noBtn.style.top = y + "px";
     }
 
     function yesClicked() {
-      document.body.innerHTML = "<h1>YAY 💕 See you on Valentine’s 😍</h1>";
+      document.body.innerHTML = `
+        <div style="
+          font-family:'Fredoka', sans-serif;
+          text-align:center;
+          background:linear-gradient(135deg,#ffd6e8,#ffeecf);
+          height:100vh;
+          display:flex;
+          align-items:center;
+          justify-content:center;
+        ">
+          <div style="
+            background:white;
+            padding:50px;
+            border-radius:25px;
+            box-shadow:0 20px 40px rgba(0,0,0,0.1);
+          ">
+            <h1 style="color:#ff4d88;">NOW THATS WHAT I'M TALKINGG ABOUTTT </h1>
+            <p style="font-size:18px;">
+              Best decision you’ve made today 😌<br>
+              See you on Valentine’s 💐
+            </p>
+          </div>
+        </div>
+      `;
     }
   </script>
-
 </body>
 </html>
+
