--- a/index.html
+++ b/index.html
@@ -4,59 +4,66 @@
   <meta charset="UTF-8">
   <title>Be My Valentine 💘</title>
 
-  <!-- Cute Google Font -->
+  <!-- Cute font -->
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     body {
       font-family: 'Fredoka', sans-serif;
-      text-align: center;
-      height: 100vh;
       margin: 0;
+      height: 100vh;
       background: linear-gradient(135deg, #ffd6e8, #ffeecf);
       display: flex;
       align-items: center;
       justify-content: center;
+      text-align: center;
     }
 
     .card {
       background: white;
-      padding: 40px;
+      padding: 35px;
       border-radius: 25px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-      max-width: 400px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+      max-width: 420px;
       width: 90%;
     }
 
     h1 {
       color: #ff4d88;
-      font-size: 28px;
+      font-size: 26px;
       margin-bottom: 10px;
     }
 
     p {
       color: #555;
       font-size: 16px;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
+    }
+
+    img {
+      width: 200px;
+      border-radius: 15px;
+      margin-bottom: 15px;
     }
 
     .buttons {
       position: relative;
-      height: 120px;
+      height: 130px;
+      margin-top: 10px;
     }
 
     button {
       font-family: 'Fredoka', sans-serif;
       font-size: 18px;
-      padding: 15px 30px;
+      padding: 14px 28px;
       border-radius: 15px;
       border: none;
       cursor: pointer;
-      transition: transform 0.2s;
+      transition: transform 0.15s;
     }
 
     button:hover {
-      transform: scale(1.05);
+      transform: scale(1.07);
     }
 
     #yes {
@@ -66,20 +73,26 @@
     }
 
     #no {
-      background-color: #f1f1f1;
+      background-color: #eee;
       color: #444;
       position: absolute;
-      left: 200px;
-      top: 40px;
+      left: 220px;
+      top: 50px;
     }
   </style>
 </head>
 
 <body>
   <div class="card">
-    <h1>Valerie will you be my Valentine? 💖</h1>
-    <p>No stress. No pressure.  
-      <br>Okay tiny pressure 😌</p>
+    <h1>Will you be my Valentine? 💖</h1>
+
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3V6bG56Z2x6YjE0bHdlM2ZydW54dXU5bnZ1c2V4eDVlZ3JpM3d6NyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif">
+
+    <p>
+      Be honest 😌<br>
+      Saying no will emotionally hurt me<br>
+      (I will recover in like 3–5 business days)
+    </p>
 
     <div class="buttons">
       <button id="yes" onclick="yesClicked()">Yes 🥰</button>
@@ -90,33 +103,39 @@
   <script>
     function moveNo() {
       const noBtn = document.getElementById("no");
-      const x = Math.random() * 250;
-      const y = Math.random() * 80;
+
+      const x = Math.random() * 280;
+      const y = Math.random() * 100;
+
       noBtn.style.left = x + "px";
       noBtn.style.top = y + "px";
+
+      // make it extra fast + chaotic
+      noBtn.style.transition = "left 0.05s, top 0.05s";
     }
 
     function yesClicked() {
       document.body.innerHTML = `
         <div style="
           font-family:'Fredoka', sans-serif;
-          text-align:center;
           background:linear-gradient(135deg,#ffd6e8,#ffeecf);
           height:100vh;
           display:flex;
           align-items:center;
           justify-content:center;
+          text-align:center;
         ">
           <div style="
             background:white;
-            padding:50px;
+            padding:45px;
             border-radius:25px;
-            box-shadow:0 20px 40px rgba(0,0,0,0.1);
+            box-shadow:0 20px 40px rgba(0,0,0,0.12);
+            max-width:420px;
           ">
-            <h1 style="color:#ff4d88;">NOW THATS WHAT I'M TALKINGG ABOUTTT </h1>
+            <h1 style="color:#ff4d88;">AS YOU SHOULD 😌💘</h1>
             <p style="font-size:18px;">
-              Best decision you’ve made today 😌<br>
-              See you on Valentine’s 💐
+              Correct answer detected ✅<br><br>
+              See you on Valentine’s 🥹💐
             </p>
           </div>
         </div>
@@ -125,4 +144,3 @@
   </script>
 </body>
 </html>
-
