--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 
   <!-- Cute font -->
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
 
   <style>
     body {
-      font-family: 'Fredoka', sans-serif;
+      font-family: 'Pacifico', cursive;
       margin: 0;
       height: 100vh;
       background: linear-gradient(135deg, #ffd6e8, #ffeecf);
@@ -53,7 +55,7 @@
     }
 
     button {
-      font-family: 'Fredoka', sans-serif;
+      font-family: 'Pacifico', cursive;
       font-size: 18px;
       padding: 14px 28px;
       border-radius: 15px;
@@ -84,14 +86,14 @@
 
 <body>
   <div class="card">
-    <h1>Will you be my Valentine? 💖</h1>
+    <h1>Valerie will you be my Valentine? 💖</h1>
 
     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3V6bG56Z2x6YjE0bHdlM2ZydW54dXU5bnZ1c2V4eDVlZ3JpM3d6NyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif">
 
     <p>
-      Be honest 😌<br>
+      Be NICE 😌<br>
       Saying no will emotionally hurt me<br>
-      (I will recover in like 3–5 business days)
+      I will NOT recover
     </p>
 
     <div class="buttons">
