--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     body {
-      font-family: 'Pacifico', cursive;
+      font-family: "Times New Roman", Times, serif;
       margin: 0;
       height: 100vh;
       background: linear-gradient(135deg, #ffd6e8, #ffeecf);
@@ -55,7 +55,7 @@
     }
 
     button {
-      font-family: 'Pacifico', cursive;
+      font-family: "Times New Roman", Times, serif;
       font-size: 18px;
       padding: 14px 28px;
       border-radius: 15px;
@@ -91,7 +91,6 @@
     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3V6bG56Z2x6YjE0bHdlM2ZydW54dXU5bnZ1c2V4eDVlZ3JpM3d6NyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif">
 
     <p>
-      Be NICE 😌<br>
       Saying no will emotionally hurt me<br>
       I will NOT recover
     </p>
@@ -134,7 +133,7 @@
             box-shadow:0 20px 40px rgba(0,0,0,0.12);
             max-width:420px;
           ">
-            <h1 style="color:#ff4d88;">AS YOU SHOULD 😌💘</h1>
+            <h1 style="color:#ff4d88;">HAH AS YOU SHOULD </h1>
             <p style="font-size:18px;">
               Correct answer detected ✅<br><br>
               See you on Valentine’s 🥹💐
