--- a/index.html
+++ b/index.html
@@ -126,17 +126,19 @@
           justify-content:center;
           text-align:center;
         ">
-          <div style="
-            background:white;
-            padding:45px;
-            border-radius:25px;
-            box-shadow:0 20px 40px rgba(0,0,0,0.12);
-            max-width:420px;
-          ">
-            <h1 style="color:#ff4d88;">HAH AS YOU SHOULD </h1>
+         <div style="
+           background:white;
+           padding:35px;       
+           border-radius:25px;
+           box-shadow:0 20px 40px rgba(0,0,0,0.12);
+           max-width:420px;    
+           width: 90%;         
+        ">
+
+            <h1 style="color:#ff4d88;">AHA YES, AS YOU SHOULD </h1>
             <p style="font-size:18px;">
               Correct answer detected ✅<br><br>
-              See you on Valentine’s 🥹💐
+              See you on the 14th!
             </p>
           </div>
         </div>
