--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
   <div class="card">
     <h1>Valerie will you be my Valentine? 💖</h1>
 
-    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3V6bG56Z2x6YjE0bHdlM2ZydW54dXU5bnZ1c2V4eDVlZ3JpM3d6NyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif">
+   <img src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" alt="cute gif" style="width:100%; border-radius:15px; margin-bottom:15px;">
+
 
     <p>
       Saying no will emotionally hurt me<br>
@@ -96,8 +97,8 @@
     </p>
 
     <div class="buttons">
-      <button id="yes" onclick="yesClicked()">Yes 🥰</button>
-      <button id="no" onmouseover="moveNo()">No 🙃</button>
+      <button id="yes" onclick="yesClicked()">Yes </button>
+      <button id="no" onmouseover="moveNo()">No </button>
     </div>
   </div>
 
@@ -118,7 +119,7 @@
     function yesClicked() {
       document.body.innerHTML = `
         <div style="
-          font-family:'Fredoka', sans-serif;
+          font-family: "Times New Roman", Times, serif;
           background:linear-gradient(135deg,#ffd6e8,#ffeecf);
           height:100vh;
           display:flex;
