--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="card">
     <h1>Valerie will you be my Valentine? 💖</h1>
 
-   <img src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif" alt="cute gif" style="width:100%; border-radius:15px; margin-bottom:15px;">
+  <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3V6bG56Z2x6YjE0bHdlM2ZydW54dXU5bnZ1c2V4eDVlZ3JpM3d6NyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/MDJ9IbxxvDUQM/giphy.gif" alt="cute gif">
 
 
     <p>
